02-web.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: web
spec:
  replicas: 3
  selector: { matchLabels: { app: nginx } }
  template:
    metadata:
      labels: { app: nginx }
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet: { path: "/", port: 80 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: "/", port: 80 }
            initialDelaySeconds: 10
            periodSeconds: 10
          command: ["/bin/sh","-c"]
          args:
            - |
              cat >/usr/share/nginx/html/index.html <<EOF
              <!doctype html>
              <html>
                <head><meta charset="utf-8"><title>AKS NGINX</title></head>
                <body>
                  <h1>Hello from AKS (Again)</h1>
                  <p>Pod: ${POD_NAME}</p>
                  <p>IP: ${POD_IP}</p>
                  <p>Time: $(date -Iseconds)</p>
                </body>
              </html>
              EOF
              nginx -g 'daemon off;'
